// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`match expressions formats a match expression 1`] = `
"module Example {
  type Option = Some(int) | None

  pure def getOrZero(value: Option): int = match value {
    | Some(x) => x
    | None => 0
    | _ => 0
  }
}
"
`;

exports[`match expressions joins a line-broken match arrow with one space 1`] = `
"module Example {
  type Node = Internal(int) | Leaf

  pure def value(node: Node): int =
      match node {
        | Internal(number) => number
        | Leaf => 0
      }
}
"
`;

exports[`match expressions preserves a compact one-arm default match 1`] = `
"module Example {
  val expected = match 42 { _ => "default" }
}
"
`;

exports[`match expressions places a match expression below a definition header 1`] = `
"module Example {
  type Status = Ready | Waiting
  var status: Status

  action step =
      match status {
        | Ready => { status' = Waiting }
        | Waiting => { status' = Ready }
      }
}
"
`;

exports[`match expressions preserves match placement after a definition equals sign 1`] = `
"module Example {
  type Option = Some(int) | None

  pure def inline(value: Option): int = match value {
    | Some(result) => result
    | None => 0
  }

  pure def expanded(value: Option): int =
      match value {
        | Some(result) => result
        | None => 0
      }
}
"
`;

exports[`match expressions preserves an inline multiline match used as a lambda body 1`] = `
"module InlineLambdaMatch {
  type Message = Msg(int) | Other

  pure def values(messages: Set[Message]): Set[int] =
      messages.fold(Set(), (acc, message) => match message {
        | Msg(value) => acc.union(Set(value))
        | _          => acc
      })
}
"
`;

exports[`match expressions aligns inline block-combinator bodies with the match case 1`] = `
"module Example {
  type Status = Ready | Waiting
  var status: Status
  var n: int

  action step =
      match status {
        | Ready => all {
            n' = n,
            status' = Waiting,
          }
        | Waiting => all {
            n' = n + 1,
            status' = Ready,
          }
      }
}
"
`;

exports[`match expressions aligns inline block-combinator bodies in nested matches 1`] = `
"module Example {
  type Inner = Exist(int) | NonExist
  type Outer = Some(Inner) | None

  pure def verify(value: Outer): bool =
      match value {
        | Some(inner) =>
            match inner {
              | Exist(n) => and {
                  n > 0,
                  n < 10,
                }
              | NonExist => true
            }
        | None => false
      }
}
"
`;

exports[`match expressions aligns an ordinary block body with the match case 1`] = `
"module Example {
  type Proof = Found(int) | Missing

  pure def verify(proof: Proof): bool =
      match proof {
        | Found(value) => {
            value > 0
          }
        | Missing => false
      }
}
"
`;

exports[`match expressions aligns an ordinary block body with the match case 2`] = `
[
  {
    "column": 1,
    "filePath": "pipe-aligned-block.qnt",
    "length": 4,
    "line": 5,
    "message": "expected a four-space continuation indent",
    "rule": "format/definition-body-indentation",
    "sourceLine": "    match proof {",
  },
  {
    "column": 1,
    "filePath": "pipe-aligned-block.qnt",
    "length": 8,
    "line": 7,
    "message": "expected block body aligned with the match case",
    "rule": "format/match-arm-body-indentation",
    "sourceLine": "        value > 0",
  },
]
`;

exports[`match expressions preserves a nested match arm body baseline 1`] = `
"module Example {
  type Inner = Leaf(int) | Internal(int)
  type Outer = Some(Inner) | None

  pure def evaluate(value: Outer): int = {
    match value {
      | Some(node) => match node {
          | Leaf(number) => number
          | Internal(number) => number + 1
        }
      | None => {
          0
        }
    }
  }
}
"
`;

exports[`match expressions preserves line-broken match arm baselines at every nesting level 1`] = `
"module Example {
  type Third = Value(int) | NoThird
  type Second = More(Third) | NoSecond
  type First = Next(Second) | NoFirst

  pure def evaluate(first: First): int =
      match first {
        | Next(second) =>
            match second {
              | More(third) =>
                  match third {
                    | Value(number) => number
                    | NoThird => 0
                  }
              | NoSecond => 0
            }
        | NoFirst => 0
      }
}
"
`;

exports[`match expressions uses a continuation indent for a line-broken nested match arm 1`] = `
"module Example {
  type Inner = Exist(int) | NonExist
  type Outer = Some(Inner) | None

  pure def verify(value: Outer): bool =
      match value {
        | Some(inner) =>
            match inner {
              | Exist(number) => number > 0
              | NonExist => true
            }
        | None => false
      }
}
"
`;

exports[`match expressions uses a four-space continuation for a line-broken match arm expression 1`] = `
"module Example {
  type Node = Leaf({ key_hash: int }) | Internal(int)
  type Proof = Exist(int) | NonExist

  pure def evaluate(proof: Proof, nodes: Set[Node], k: int): bool =
      match proof {
        | Exist(ep) =>
            nodes.filter(n => match n {
              | Leaf(n) => n.key_hash == k
              | Internal(_) => false
            }).size() > 0
        | NonExist => true
      }
}
"
`;

exports[`match expressions preserves record literal match-arm body indentation 1`] = `
"module Example {
  type Outcome = Updated(int) | Deleted

  pure def evaluate(outcome) = match outcome {
    | Updated(number) => {
        child: number,
        changed: true,
      }
    | Deleted => {
        child: 0,
        changed: false,
      }
  }
}
"
`;

exports[`match expressions preserves nested record literal match-arm body indentation 1`] = `
"module Example {
  type Optional = Some(int) | None
  type Outcome = Updated(int) | Unchanged(Optional)

  pure def evaluate(outcome, new_tree) = {
    match outcome {
      | Updated(number) => {
          ...new_tree,
          value: number,
        }
      | Unchanged(optional) => {
          match optional {
            | Some(number) => {
                ...new_tree,
                value: number,
              }
            | None => new_tree
          }
        }
      | _ => new_tree
    }
  }
}
"
`;

exports[`match expressions preserves comments between match arms 1`] = `
"module Example {
  type Step = First | Second
  pure def value(step) = match step {
    // Preserve this arm comment.
    | First => 1
    | Second => 2
  }
}
"
`;

exports[`match expressions preserves a comment before a match-arm body 1`] = `
"module Example {
  type Step = First | Second
  pure def value(step) = match step {
    | First =>
      // Preserve this arm body comment.
      1
    | Second => 2
  }
}
"
`;

exports[`match expressions preserves an aligned comment after a match-arm arrow 1`] = `
"module Example {
  type Mode = Ready | Waiting

  const mode: Mode

  val result = match mode {
    | Ready => 1
    | Waiting =>        // Explain this arm.
      2
  }
}
"
`;

exports[`match expressions preserves a multiline match-arm body with a trailing comment 1`] = `
"module Example {
  type Status = Ready | Waiting
  var status: Status

  val number =
      match status {
        | Ready =>
            1 // Ready has a value
        | Waiting => 0
      }
}
"
`;
